--- a/proyectoFinal/escuelaDigital/pom.xml
+++ b/proyectoFinal/escuelaDigital/pom.xml
@@ -52,9 +52,13 @@
            
  <dependency>
         <groupId>javax.servlet.jsp.jstl</groupId>
-        <artifactId>jstl</artifactId>
+        <artifactId>jstl-api</artifactId>
         <version>1.2</version>
     </dependency>
+    
+    
+    
+    
 
     </dependencies>
 
